# Lie_Group

./: .gitignore  CMakeLists.txt  README.md
Python/: example_1.py  example_1_continuous.py  example_1_discrete.py  example_1_dscrete_sivia_perso.py  example_2.py  example_2_continuous.py  example_2_discrete.py  example_3.py  example_3_continuous.py  example_3_discrete.py  example_4.py  example_4_continuous.py  example_4_discrete.py  lie_group_ex4_separator.py  pysivia.py
src/: CMakeLists.txt
src/VIbes_version/: CMakeLists.txt
src/VIbes_version/article_figures_vibes/: CMakeLists.txt  example_1.cpp  example_2.cpp  example_3.cpp  example_4.cpp
src/comparisons_review_2/: CMakeLists.txt  comparison_capd_lohner_lie.cpp  ex_2_cn_method.cpp  ex_3_cn_method.cpp  ex_4_cn_method.cpp  integration_ex_1.cpp  integration_ex_2.cpp  integration_ex_3.cpp  integration_ex_4.cpp  particles_comparison.cpp  reachability.cpp  sivia_capd_integration.cpp
src/contractor_network_version/: CMakeLists.txt  ex_1_cn_method.cpp  ex_2_cn_method.cpp  ex_3_cn_method.cpp  ex_4_cn_method.cpp
src/ipegenerator_version/: CMakeLists.txt
src/ipegenerator_version/article_figures_ipe/: CMakeLists.txt  example_1_article_form.cpp  example_2_article_form.cpp  example_3_article_form.cpp  example_4_article_form.cpp
src/ipegenerator_version/integration_ipe/: CMakeLists.txt
src/optimum_speed/: CMakeLists.txt  example_1.cpp  example_1_article_form.cpp  example_2.cpp  example_2_article_form.cpp  example_3.cpp  example_3_article_form.cpp  example_4.cpp  example_4_article_form.cpp
src/optimum_speed/article_figures/: CMakeLists.txt  example_1_article_form.cpp  example_2_article_form.cpp  example_3_article_form.cpp  example_4_article_form.cpp
src/optimum_speed/vibes_version/: example_1.cpp  example_2.cpp
src/tools/: CMakeLists.txt  ctc_cn.cpp  ctc_cn.h  lie_group_ex3_separator.cpp  lie_group_ex3_separator.h  lie_group_ex4_separator.cpp  lie_group_ex4_separator.h  pyibex_SepProj.cpp  pyibex_SepProj.h  sivia.cpp  sivia.h  tools.h  utils.h
